# tapped.ai

./: README.md  TODO.md
.github/workflows/: flutter.yml  rust.yml
api.tapped.ai/: Cargo.toml  Dockerfile  README.md
api.tapped.ai/src/: docs.rs  environment.rs  lib.rs  main.rs  openapi.json  routes.rs  startup.rs  state.rs
api.tapped.ai/src/data/: database.rs  mod.rs  search.rs
api.tapped.ai/src/domain/: auth.rs  controller.rs  mod.rs
api.tapped.ai/src/domain/models/: api_key.rs  booking.rs  mod.rs  review.rs  user.rs
api.tapped.ai/tests/api/: health_check.rs  helpers.rs
armada.tapped.ai/: package-lock.json  package.json
com.intheloopstudio/: analysis_options.yaml  pubspec.yaml
com.intheloopstudio/lib/: main.dart
event-crawler/: .eslintrc.cjs  .gitignore  README.md  TODO.md  check_json.sh  package-lock.json  package.json  tsconfig.json
event-crawler/docs/: CRAWLER_DEPLOYMENT.md
event-crawler/src/: main.ts  routes.ts  types.ts
getmusicart.com/: next.config.js  package-lock.json  package.json  tailwind.config.ts
getmusicepk.com/: next.config.js  package-lock.json  package.json
getmusicnewsletters/: package-lock.json  package.json
linktree.tapped.ai/: .gitignore  README.md  package-lock.json  package.json
linktree.tapped.ai/public/: index.html  (+1 more)
marketer.tapped.ai/: .env.local.example  .eslintrc.js  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  tailwind.config.ts
midia-to-threads/: .gitignore  main.ipynb
platform/: .gitignore
ticket-crawler/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  tsconfig.json
venue-enrichment/: .env.example  .gitignore  Cargo.toml  README.md  config.toml
venue-enrichment/examples/: small_test.csv  venues.csv  venues.json
venue-enrichment/output/: .gitkeep
venue-enrichment/src/: agent.rs  main.rs  models.rs  templates.rs  utils.rs
venue-enrichment/templates/: best_sources.jinja  rank_sources.jinja  scraping_instructions.jinja  structured_extraction.jinja
viralsocialmediaideas.com/: package-lock.json  package.json
(+205 files in other folders)
