[package]
name = "tapped-api-rs"
authors = ["Johannes Naylor <johannes@tapped.ai>"]
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = [
    "redoc",
    "scalar",
    "axum",
    "axum-extra",
    "macros",
] }
darling = { version = "0.13.0-beta" }
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = "0.9.3"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
axum-swagger-ui = "0.3.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.68"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
schemars = { version = "0.8.21", features = ["uuid1"] }
axum-macros = "0.4.1"
algoliasearch = "0.1.7"
dotenvy = "0.15.7"
firestore = "0.43.0"
futures = "0.3.30"
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
color-eyre = "0.6.3"
chrono = "0.4.38"
derive_builder = "0.20.0"
tower = "0.4.13"
config = "0.14.0"

[dev-dependencies]
once_cell = "1.19.0"
reqwest = "0.12.5"
