[package]
name = "venue-enrichment"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
color-eyre = "0.6.5"
csv = "1.3.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
jsonschema = "0.33.0"
log = "0.4.27"
minijinja = { version = "2.12.0", features = ["json"] }
rand = "0.9.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["json"] }
schemars = { version = "1.0.4", features = ["derive"] }
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
spider = "2.37.156"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
url = "2.5.7"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
